; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zfs/extr_zfs_main.c_zfs_do_holds.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zfs/extr_zfs_main.c_zfs_do_holds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32, i32**, i64, i32 }

@B_FALSE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c"rH\00", align 1
@ZFS_TYPE_SNAPSHOT = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"invalid option '%c'\0A\00", align 1
@optopt = common dso_local global i32 0, align 4
@ZFS_TYPE_FILESYSTEM = common dso_local global i32 0, align 4
@ZFS_TYPE_VOLUME = common dso_local global i32 0, align 4
@ZFS_ITER_RECURSE = common dso_local global i32 0, align 4
@optind = common dso_local global i64 0, align 8
@NV_UNIQUE_NAME = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [24 x i8] c"'%s' is not a snapshot\0A\00", align 1
@holds_callback = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [23 x i8] c"no datasets available\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**)* @zfs_do_holds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfs_do_holds(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_3__, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  store i32 0, i32* %5, align 4
  %20 = load i64, i64* @B_FALSE, align 8
  store i64 %20, i64* %8, align 8
  %21 = load i64, i64* @B_FALSE, align 8
  store i64 %21, i64* %9, align 8
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %10, align 8
  %22 = load i32, i32* @ZFS_TYPE_SNAPSHOT, align 4
  store i32 %22, i32* %12, align 4
  %23 = bitcast %struct.TYPE_3__* %13 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %23, i8 0, i64 40, i1 false)
  store i32 0, i32* %14, align 4
  store i32 0, i32* %15, align 4
  store i32 0, i32* %16, align 4
  br label %24

24:                                               ; preds = %43, %2
  %25 = load i32, i32* %3, align 4
  %26 = load i8**, i8*** %4, align 8
  %27 = load i8*, i8** %10, align 8
  %28 = call i32 @getopt(i32 %25, i8** %26, i8* %27)
  store i32 %28, i32* %6, align 4
  %29 = icmp ne i32 %28, -1
  br i1 %29, label %30, label %44

30:                                               ; preds = %24
  %31 = load i32, i32* %6, align 4
  switch i32 %31, label %43 [
    i32 114, label %32
    i32 72, label %34
    i32 63, label %36
  ]

32:                                               ; preds = %30
  %33 = load i64, i64* @B_TRUE, align 8
  store i64 %33, i64* %9, align 8
  br label %43

34:                                               ; preds = %30
  %35 = load i64, i64* @B_TRUE, align 8
  store i64 %35, i64* %8, align 8
  br label %43

36:                                               ; preds = %30
  %37 = load i32, i32* @stderr, align 4
  %38 = call i8* @gettext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %39 = load i32, i32* @optopt, align 4
  %40 = call i32 (i32, i8*, ...) @fprintf(i32 %37, i8* %38, i32 %39)
  %41 = load i64, i64* @B_FALSE, align 8
  %42 = call i32 @usage(i64 %41)
  br label %43

43:                                               ; preds = %36, %30, %34, %32
  br label %24

44:                                               ; preds = %24
  %45 = load i64, i64* %9, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %56

47:                                               ; preds = %44
  %48 = load i32, i32* @ZFS_TYPE_FILESYSTEM, align 4
  %49 = load i32, i32* @ZFS_TYPE_VOLUME, align 4
  %50 = or i32 %48, %49
  %51 = load i32, i32* %12, align 4
  %52 = or i32 %51, %50
  store i32 %52, i32* %12, align 4
  %53 = load i32, i32* @ZFS_ITER_RECURSE, align 4
  %54 = load i32, i32* %16, align 4
  %55 = or i32 %54, %53
  store i32 %55, i32* %16, align 4
  br label %56

56:                                               ; preds = %47, %44
  %57 = load i64, i64* @optind, align 8
  %58 = load i32, i32* %3, align 4
  %59 = sext i32 %58 to i64
  %60 = sub nsw i64 %59, %57
  %61 = trunc i64 %60 to i32
  store i32 %61, i32* %3, align 4
  %62 = load i64, i64* @optind, align 8
  %63 = load i8**, i8*** %4, align 8
  %64 = getelementptr inbounds i8*, i8** %63, i64 %62
  store i8** %64, i8*** %4, align 8
  %65 = load i32, i32* %3, align 4
  %66 = icmp slt i32 %65, 1
  br i1 %66, label %67, label %70

67:                                               ; preds = %56
  %68 = load i64, i64* @B_FALSE, align 8
  %69 = call i32 @usage(i64 %68)
  br label %70

70:                                               ; preds = %67, %56
  %71 = load i32, i32* @NV_UNIQUE_NAME, align 4
  %72 = call i64 @nvlist_alloc(i32** %11, i32 %71, i32 0)
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %74, label %76

74:                                               ; preds = %70
  %75 = call i32 (...) @nomem()
  br label %76

76:                                               ; preds = %74, %70
  store i32 0, i32* %7, align 4
  br label %77

77:                                               ; preds = %130, %76
  %78 = load i32, i32* %7, align 4
  %79 = load i32, i32* %3, align 4
  %80 = icmp slt i32 %78, %79
  br i1 %80, label %81, label %133

81:                                               ; preds = %77
  %82 = load i8**, i8*** %4, align 8
  %83 = load i32, i32* %7, align 4
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds i8*, i8** %82, i64 %84
  %86 = load i8*, i8** %85, align 8
  store i8* %86, i8** %17, align 8
  %87 = load i8*, i8** %17, align 8
  %88 = call i8* @strchr(i8* %87, i8 signext 64)
  store i8* %88, i8** %18, align 8
  %89 = load i8*, i8** %18, align 8
  %90 = icmp eq i8* %89, null
  br i1 %90, label %91, label %98

91:                                               ; preds = %81
  %92 = load i32, i32* @stderr, align 4
  %93 = call i8* @gettext(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %94 = load i8*, i8** %17, align 8
  %95 = call i32 (i32, i8*, ...) @fprintf(i32 %92, i8* %93, i8* %94)
  %96 = load i32, i32* %5, align 4
  %97 = add nsw i32 %96, 1
  store i32 %97, i32* %5, align 4
  br label %130

98:                                               ; preds = %81
  %99 = load i8*, i8** %18, align 8
  %100 = getelementptr inbounds i8, i8* %99, i64 1
  store i8* %100, i8** %19, align 8
  %101 = load i64, i64* %9, align 8
  %102 = icmp ne i64 %101, 0
  br i1 %102, label %103, label %111

103:                                              ; preds = %98
  %104 = load i8*, i8** %17, align 8
  %105 = load i8*, i8** %18, align 8
  %106 = load i8*, i8** %17, align 8
  %107 = ptrtoint i8* %105 to i64
  %108 = ptrtoint i8* %106 to i64
  %109 = sub i64 %107, %108
  %110 = getelementptr inbounds i8, i8* %104, i64 %109
  store i8 0, i8* %110, align 1
  br label %111

111:                                              ; preds = %103, %98
  %112 = load i64, i64* %9, align 8
  %113 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 4
  store i64 %112, i64* %113, align 8
  %114 = load i8*, i8** %19, align 8
  %115 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i8* %114, i8** %115, align 8
  %116 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 3
  store i32** %11, i32*** %116, align 8
  %117 = load i32, i32* %3, align 4
  %118 = load i8**, i8*** %4, align 8
  %119 = load i32, i32* %16, align 4
  %120 = load i32, i32* %12, align 4
  %121 = load i32, i32* %14, align 4
  %122 = load i32, i32* @holds_callback, align 4
  %123 = call i32 @zfs_for_each(i32 %117, i8** %118, i32 %119, i32 %120, i32* null, i32* null, i32 %121, i32 %122, %struct.TYPE_3__* %13)
  store i32 %123, i32* %15, align 4
  %124 = load i32, i32* %15, align 4
  %125 = icmp ne i32 %124, 0
  br i1 %125, label %126, label %129

126:                                              ; preds = %111
  %127 = load i32, i32* %5, align 4
  %128 = add nsw i32 %127, 1
  store i32 %128, i32* %5, align 4
  br label %129

129:                                              ; preds = %126, %111
  br label %130

130:                                              ; preds = %129, %91
  %131 = load i32, i32* %7, align 4
  %132 = add nsw i32 %131, 1
  store i32 %132, i32* %7, align 4
  br label %77

133:                                              ; preds = %77
  %134 = load i64, i64* %8, align 8
  %135 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 2
  %136 = load i32, i32* %135, align 4
  %137 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %138 = load i32, i32* %137, align 8
  %139 = load i32*, i32** %11, align 8
  %140 = call i32 @print_holds(i64 %134, i32 %136, i32 %138, i32* %139)
  %141 = load i32*, i32** %11, align 8
  %142 = call i64 @nvlist_empty(i32* %141)
  %143 = icmp ne i64 %142, 0
  br i1 %143, label %144, label %148

144:                                              ; preds = %133
  %145 = load i32, i32* @stderr, align 4
  %146 = call i8* @gettext(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  %147 = call i32 (i32, i8*, ...) @fprintf(i32 %145, i8* %146)
  br label %148

148:                                              ; preds = %144, %133
  %149 = load i32*, i32** %11, align 8
  %150 = call i32 @nvlist_free(i32* %149)
  %151 = load i32, i32* %5, align 4
  %152 = icmp ne i32 0, %151
  %153 = zext i1 %152 to i32
  ret i32 %153
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @getopt(i32, i8**, i8*) #2

declare dso_local i32 @fprintf(i32, i8*, ...) #2

declare dso_local i8* @gettext(i8*) #2

declare dso_local i32 @usage(i64) #2

declare dso_local i64 @nvlist_alloc(i32**, i32, i32) #2

declare dso_local i32 @nomem(...) #2

declare dso_local i8* @strchr(i8*, i8 signext) #2

declare dso_local i32 @zfs_for_each(i32, i8**, i32, i32, i32*, i32*, i32, i32, %struct.TYPE_3__*) #2

declare dso_local i32 @print_holds(i64, i32, i32, i32*) #2

declare dso_local i64 @nvlist_empty(i32*) #2

declare dso_local i32 @nvlist_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
